# AI-bootcamp

./: README.md  pyproject.toml
data_cache /youtube_videos/: 0I2FHH95Ofs.txt
data_cache/youtube_videos/: 0wANfIvum4U.txt  2ZOnA19sDpM.txt
project/: data_ingest.py  data_ingestion.ipynb  dataingestion_chunking.ipynb
week 1/: Homework.ipynb  RAG_youtube_transcripts.ipynb  document RAG.ipynb  env_test.ipynb
week 2/: Agentic RAG - toyaikit.ipynb  Agentic RAG.ipynb  MultiAgentSystem_OpenaiSDK.ipynb  agents_openaiSDK.ipynb  agents_pydanticAI.ipynb  homework.ipynb  youtube.py
