[project]
name = "ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai>=2.2.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "toyaikit>=0.0.5",
    "youtube-transcript-api>=1.2.2",
]
